# POK1_Not_Minecraft

./: .gitignore  CMakeLists.txt
assets/shaders/: cubemap.frag  light_tex_array.frag  model_view_proj_matrices.vert  mvp_matrices_cubemap.vert  texture.frag  texture.vert  transform4x4.vert  upside_down.vert
include/: camera.h  main.h  shaderprogram.h  simplexnoise.h  world.h
shaders/: color_pos.vert  do_nothing.vert  move_circle.vert
src/: camera.cpp  main.cpp  shaderprogram.cpp  simplexnoise.cpp  world.cpp
